--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^3.0.9
+  flip_card: ^0.4.4
+  flutter_svg: ^0.17.3+1
 
 
   # The following adds the Cupertino Icons font to your application.
