--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,10 +5,19 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+          <!-- <uses-permission android:name="android.permission.INTERNET"/> -->
+          <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
+          <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+          <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> -->
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="country_house"
         android:icon="@mipmap/ic_launcher">
+          <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAsWan8XuW-z8OCw7dd2Gnwe3ICBqVA-jg"/>
+        <!-- <meta-data android:name="com.google.android.geo.API_KEY" -->
+          <!-- android:value="AIzaSyDgiRD4bvbQrGL9GlRsDouJp9WTk7k1RVA" /> -->
+     
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
