--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dio: ^3.0.9
   flip_card: ^0.4.4
   flutter_svg: ^0.17.3+1
+  google_maps_flutter: ^0.5.25+3
 
 
   # The following adds the Cupertino Icons font to your application.
